--- a/Libro/Libro.html
+++ b/Libro/Libro.html
@@ -139,38 +139,6 @@ Facultad de Ingeniería Estadística e Informática
 <section id="introducción" class="level2">
 <h2 class="anchored" data-anchor-id="introducción">Introducción</h2>
 <p>Las <strong>estructuras de datos</strong> son la columna vertebral de la programación eficiente. Permiten <strong>almacenar, organizar y manipular datos</strong> de forma sistemática dentro de un programa. Su correcta aplicación facilita la resolución de problemas complejos, mejora el rendimiento del software y permite crear algoritmos más optimizados.</p>
-<style>
-  .img-container {
-    position: relative;
-    display: inline-block;
-  }
-
-  .img-container::before,
-  .img-container::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    width: 50px;
-    height: 100%;
-    z-index: 2;
-    pointer-events: none;
-  }
-
-  .img-container::before {
-    left: 0;
-    background: linear-gradient(to right, rgba(255,255,255,1), rgba(255,255,255,0));
-  }
-
-  .img-container::after {
-    right: 0;
-    background: linear-gradient(to left, rgba(255,255,255,1), rgba(255,255,255,0));
-  }
-
-  .img-container img {
-    display: block;
-    max-width: 100%;
-  }
-</style>
 <p align="center">
 <span class="img-container"> <img src="img/est.png" alt="" width="300"> </span>
 </p>
@@ -234,38 +202,6 @@ Facultad de Ingeniería Estadística e Informática
 </section>
 <section id="i-operadores" class="level2">
 <h2 class="anchored" data-anchor-id="i-operadores">I Operadores</h2>
-<style>
-  .img-container {
-    position: relative;
-    display: inline-block;
-  }
-
-  .img-container::before,
-  .img-container::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    width: 50px;
-    height: 100%;
-    z-index: 2;
-    pointer-events: none;
-  }
-
-  .img-container::before {
-    left: 0;
-    background: linear-gradient(to right, rgba(255,255,255,1), rgba(255,255,255,0));
-  }
-
-  .img-container::after {
-    right: 0;
-    background: linear-gradient(to left, rgba(255,255,255,1), rgba(255,255,255,0));
-  }
-
-  .img-container img {
-    display: block;
-    max-width: 100%;
-  }
-</style>
 <p align="center">
 <span class="img-container"> <img src="img/ope.png" alt="" width="300"> </span>
 </p>
@@ -337,6 +273,9 @@ Facultad de Ingeniería Estadística e Informática
 <section id="ii-estructuras-de-control" class="level2">
 <h2 class="anchored" data-anchor-id="ii-estructuras-de-control">II Estructuras De Control</h2>
 <p>Las <strong>estructuras de control</strong> son la columna vertebral de la lógica en la programación. Permiten decidir qué instrucciones se ejecutan, en qué momento y cuántas veces. Gracias a ellas, un programa puede responder a condiciones cambiantes o repetir procesos sin intervención humana.</p>
+<p align="center">
+<span class="img-container"> <img src="img/cont.png" alt="" width="300"> </span>
+</p>
 <p>Existen dos grandes tipos:<br>
 - <strong>Condicionales</strong>, como <code>if</code>, <code>else</code> o <code>switch</code>, que permiten elegir entre distintas rutas de ejecución.<br>
 - <strong>Repetitivas</strong>, como <code>for</code>, <code>while</code> y <code>do-while</code>, que permiten ejecutar bloques de código múltiples veces, controlando así bucles y ciclos automáticos.</p>
